Configure H2 database and downgrade Spring Boot version
H2 database has been set up and configured in the properties file to use JDBC. Configurations for console path, tracing, remote access and more are also established in the properties file. Additionally, the Spring Boot version in the pom.xml has been downgraded from 3.2.1 to 3.1.7. This also includes adding the database directory to the .gitignore file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,32 @@
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-
-
 #with this I can connect the @ to change dynamic a website
 server.servlet.context-path=/
+
+
+#   H2 Database configuration.
+## here the data will be  saved. The './' going me to the root of the application.
+## specifies which java database driver to use.
+## username
+## password
+## specifies the language that the app used for speak with the database.
+## specifies that my database tables and values only update and not delete each time
+spring.datasource.url=jdbc:h2:file:./data/applicationData;NON_KEYWORDS=user,day
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=tria
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+## we turn the console on, so we can see the content of our database on browser
+## we set the path that will be call the database: 127.0.0.1/8080/h2
+## disable remote access
+## disable detailed logging or tracing information in the application log in the file applicationData.trace.db
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+
